<resources>

    <string name="app_name">TestServices</string>
    <string name="title_activities">TetService</string>
    <string name="main_title">Please, log in</string>
    <!-- Loggin screen -->
    <string name="login_button_title">Log in</string>
    <string name="login_hint_email">E-mail</string>
    <string name="login_hint_password">Password</string>
    <string name="service_url">Enter URL adress</string>
    <string name="dialog_message">Do you want sync data with service?</string>
    <string name="btn_sync_data">Sync data</string>
    
    <string name="dialog_open_book_message">Do you want to open new book?</string>
    <string name="btn_open_book">Open book</string>
    <string name="btn_cansel">Cansel</string>
    
    <string name="menu_new_book">Open new book</string>

</resources>