<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/main_title"
        android:textSize="17dp"
        android:textStyle="bold"
        tools:context=".LoginActivity" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium" >

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/url_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/service_url"
            android:inputType="textWebEditText" >
        </EditText>

        <Button
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_title"
            android:textStyle="bold" >
        </Button>
    </LinearLayout>

</LinearLayout>